Rebrand to SpecSailor: Complete Telco churn prediction system with ML pipeline, enhanced visualizations, and comprehensive README

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SpecSailor - Islamic App User Retention Prediction</title>
-    <meta name="description" content="XGBoost-powered churn prediction system for Islamic mobile apps. Navigate user retention with 87% accuracy and actionable insights." />
-    <meta name="author" content="SpecSailor" />
+    <title>ChurnGuard Pro - Telco Customer Churn Prediction</title>
+    <meta name="description" content="XGBoost-powered churn prediction system for telecommunications companies. Protect your customer base with >80% accuracy and actionable insights." />
+    <meta name="author" content="ChurnGuard Pro" />
 
-    <meta property="og:title" content="SpecSailor - Islamic App Retention System" />
-    <meta property="og:description" content="ML-powered churn prediction with 87% accuracy. Navigate user retention with precision." />
+    <meta property="og:title" content="ChurnGuard Pro - Telco Customer Churn Prediction" />
+    <meta property="og:description" content="ML-powered churn prediction with >80% accuracy. Protecting your customer base." />
     <meta property="og:type" content="website" />
 
     <meta name="twitter:card" content="summary_large_image" />
